# CPP-CMAKE-VCPKG

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
